2007-11-04  Hans Breuer  <hans@breuer.org>

	* objects/standard/outline.c : oops, the cairo context was leaked

	* app/menus.c data/display-ui.xml data/integrated-ui.xml
	  data/popup-ui.xml : put Outline to the menus
	* objects/standard/outline.c : need PROP_STD_TEXT_*_OPTIONS,
	otherwise the font specific stuff would not be saved/restored
	(outline_copy) : copy also the font information and colors
	* objects/makefile.msc : build Outline on win32
	* samples/render-test.dia : updated to also use Outline

	* plug-ins/dxf/dxf-import.c : the logic to detect a 4 point 'SOLID'
	was flawed, it is enough if x or y is different

2007-11-03  Hans Breuer  <hans@breuer.org>

	* objects/standard/outline.c : an object drawing text outlines, 
	even rotateable. Backdoor making Dia finally support some
	rotated text, compatible with all existing renderers ;)
	* objects/standard/pixmaps/outline.png : an ugly icon
	* objects/standard/standard.c : register and ...
	* objects/standard/Makefile.am : ... build it

	* app/interface.c : less magic number to reorder the sheet_option_menu

2007-10-31  Lars Clausen  <lars@raeder.dk>

	* objects/UML/umloperation.c: 
	* objects/UML/umlattribute.c: 
	* objects/UML/uml.h: 
	* objects/UML/uml.c: 
	* objects/UML/class.c:
	* objects/UML/class_dialog.c: Reverting UML patch: Patch not
	complete and changes non-standard.

2007-10-30  Lars Clausen  <lars@raeder.dk>

	* objects/UML/transition.c (transition_draw): Make sure transition
	uses solid linestyle.  Fixes bug #372149.

2007-10-28  Lars Clausen  <lars@raeder.dk>

	* objects/UML/umloperation.c: 
	* objects/UML/umlattribute.c: 
	* objects/UML/uml.h: 
	* objects/UML/uml.c: 
	* objects/UML/class.c:
	* objects/UML/class_dialog.c: Patch from jan jan
	<jve7gm@gmail.com>: Add attributes and "sealed" to UML.


2007-10-28  Hans Breuer  <hans@breuer.org>

	* lib/libdiadef.c : added lader_find_objects_containing_rectangle
	
	[ overhaul of the DXF plug-in, en passant fixing bug #481193 ]