@@ -561,17 +561,17 @@ edit_delete_callback (GtkAction *action)
   GList *delete_list;
   DDisplay *ddisp;
 
-  ObjectChange *change = NULL;
-
   ddisp = ddisplay_active();
   if (!ddisp) return;
   if (textedit_mode(ddisp)) {
+    ObjectChange *change = NULL;
     Focus *focus = active_focus();
     if (!text_delete_key_handler(focus, &change)) {
       return;
     }
     object_add_updates(focus->obj, ddisp->diagram);    
   } else {
+    Change *change = NULL;
     diagram_selected_break_external(ddisp->diagram);
     
     delete_list = diagram_get_sorted_selected(ddisp->diagram);
@@ -724,9 +724,13 @@ help_about_callback (GtkAction *action)
 	"along with this program; if not, write to the Free Software\n"
 	"Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.\n");
 
+  gchar *dirname = dia_get_data_directory("");
+  gchar *filename = g_build_filename (dirname, "dia-splash.png", NULL);
+  GdkPixbuf *logo = gdk_pixbuf_new_from_file(filename, NULL);
+
   gtk_about_dialog_set_url_hook (activate_url, NULL, NULL);
   gtk_show_about_dialog (NULL,
-	"logo-icon-name", "dia",
+	"logo", logo,
         "name", "Dia",
 	"version", VERSION,
 	"comments", _("A program for drawing structured diagrams."),
@@ -738,6 +742,10 @@ help_about_callback (GtkAction *action)
 			? translators : NULL,
 	"license", license,
 	NULL);
+  g_free (dirname);
+  g_free (filename);
+  if (logo)
+    g_object_unref (logo);
 }
 
 void
