@@ -1,5 +1,13 @@
 2007-11-04  Hans Breuer  <hans@breuer.org>
 
+	* app/pixmaps/dia-app.png app/pixmaps/dia-diagram.png : restored
+	from dia_gnome_icon.png, dia-diagram.png revision 3838
+	* app/interface.c : if there is no window_icon set by the theme
+	use the inline icons again. Fixes bug #491100 without reverting to
+	the behaviour before bug #463115
+	* app/commands.c : use the splash screen again in the about box
+	* app/Makefile.am app/makefile.msc : build integration
+
 	* objects/standard/outline.c : oops, the cairo context was leaked
 
 	* app/menus.c data/display-ui.xml data/integrated-ui.xml
